option('gstreamer_backend', type : 'feature', value: 'enabled')
option('default_backend', type: 'string', value: 'gstreamer')
option('introspection', type: 'boolean', value: 'true')
option('vapi', type: 'boolean', value: 'true')
option('gtk_doc', type: 'boolean', value: 'false')
option('test_media', type: 'string', value: 'tests/gupnp-dlna-media')
